testsuite/gnatprove/tests/1133__dynamic_mutable_discrs/test.out
test.adb:16:23: error: object might be constrained or unconstrained
test.adb:16:23: error: unknown value of object size is not yet supported
test.adb:19:26: error: object might be constrained or unconstrained
test.adb:19:26: error: unknown value of object size is not yet supported
test.adb:24:20: error: object might be constrained or unconstrained
test.adb:24:20: error: unknown value of object size is not yet supported
gnatprove: error during flow analysis and proof
